--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -7,13 +7,13 @@ services:
       - ./.env
     ports:
       - "8000:8000"
-    depends_on:
-      - db
-  db:
-    image: postgres:13
-    environment:
-      POSTGRES_DB: ${DB_NAME}
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-    ports:
-      - "5432:5432"
+  #   depends_on:
+  #     - db
+  # db:
+  #   image: postgres:13
+  #   environment:
+  #     POSTGRES_DB: ${DB_NAME}
+  #     POSTGRES_USER: ${DB_USER}
+  #     POSTGRES_PASSWORD: ${DB_PASSWORD}
+  #   ports:
+  #     - "5432:5432"
